<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="score_one">1</string>
    <string name="score_two">2</string>
    <string name="score_three">3</string>
    <string name="penalty">Penalty</string>
    <integer name="initial">0</integer>
    <string name="round">Round</string>
    <integer name="init_round">1</integer>
    <string name="reset">Reset</string>
</resources>
