<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!-- Red player -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_dark">

        <!-- Penalty tracking -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="8dp">

            <Button
                android:layout_marginStart="8dp"
                android:layout_marginEnd="30dp"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:text="@string/penalty"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_height="match_parent"
                android:textSize="35sp"
                android:text="@integer/initial"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </LinearLayout>
        <!-- Track score -->
        <TextView
            android:id="@+id/red_player_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@integer/initial"
            android:textSize="175dp"
            android:gravity="center_horizontal"/>

        <!-- Increment score -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="4dp">

            <Button
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/score_one"/>

            <Button
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/score_two"/>

            <Button
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/score_three"/>

        </LinearLayout>


    </LinearLayout>

    <!-- Middle demarcator -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <!-- Reset button -->
        <Button
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>

        <!-- Round indicator -->
        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/round"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/background_dark"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@integer/init_round"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/background_dark"
            android:textAllCaps="true"

    </LinearLayout>

    <!-- Blue player -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark">

        <!-- Track penalties -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="8dp">

            <Button
                android:layout_marginStart="8dp"
                android:layout_marginEnd="30dp"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:text="@string/penalty"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_height="match_parent"
                android:textSize="35sp"
                android:text="@integer/initial"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <!-- Track score -->
        <TextView
            android:id="@+id/blue_player_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@integer/initial"
            android:textSize="175dp"
            android:gravity="center_horizontal"/>

        <!-- Increment score -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp">

            <Button
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/score_one"/>

            <Button
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/score_two"/>

            <Button
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/score_three"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>